# platform-core

./: main.py  pyproject.toml
infra/: .dockerignore  Dockerfile  alertmanager.yml  compose.yml  loki.yml  prometheus.yml  prometheus_alerts.yml  tempo.yml
infra/grafana/dashboards/: ai-agent-breakdown.json  ai-agent-overview.json
infra/otel-collector/: config.yml
observability/instrumentation/: auto_instrumentation.py  instrumentation.py
observability/logs/: logging_config.py  structlog_config.py
observability/metrics/: metrics_config.py
observability/resource/: resource.py
observability/traces/: tracing_config.py
services/auth_service/alembic/: env.py
services/auth_service/alembic/versions/: 96fe26175af4_initial_migration.py
services/auth_service/app/: main.py  settings.py
services/auth_service/app/api/dependencies/: auth.py  services.py
services/auth_service/app/api/security/: tokens.py
services/auth_service/app/application/: unit_of_work.py
services/auth_service/app/application/messaging/: domain_event.py  outbox_repository.py
services/auth_service/app/application/services/: complete_profile_service.py  (+5 more)
services/auth_service/app/exceptions/: base.py  handlers.py  setup.py
services/auth_service/app/middleware/: tenant_context.py
services/auth_service/app/observability/: setup.py
services/auth_service/app/workers/: outbox_worker.py
services/notification_service/app/: settings.py
services/notification_service/app/schemas/: email_event.py  event_envelope.py
services/notification_service/app/workers/: email_worker.py
(+70 files in other folders)
